@@ -26,7 +26,9 @@
  - Fixed userlist insertion and deletion performance problem [704233].
  - Each toplevel window now has a "role".
  - Smaller bugs fixed: [698449] [718851].
- - 
+ - TCL plugin fixes for context lookups (Daniel P. Stasinski).
+ - Changed Close Tab keybinding to Shift-Ctrl-W to avoid conflict with
+   emacs editing.
 
 
 ----------------------------------------------------------------------
